Check and fix contrast errors

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -118,18 +118,18 @@ header {
 }
 
 .btn-outline {
-  background-color: #b38a4c;
+  background-color: #caad82;
   margin-left: 1rem;
   margin-right: 2rem;
-  color: rgb(255, 255, 255);
+  color: 53131E;
   border-radius: 2em;
   padding-left: 1rem;
   padding-right: 1rem;
-  text-shadow: 0.5px 0.5px black;
+  /* text-shadow: 0.5px 0.5px black; */
 }
 
 .btn-outline:hover {
-  background-color: #caad82;
+  background-color: #B38A4C;
 }
 
 @media (max-width: 991px) {
